<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/start_fragment"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/the_limit"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <EditText
            android:layout_marginTop="10dp"
            android:layout_width="300dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/limit_edit"
            android:inputType="number"
            android:layout_gravity="center"
            android:background="#ffffff"
            android:gravity="center"
            android:hint="@string/the_limit"/>
    </LinearLayout>
    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:text="@string/players"/>
    <ScrollView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/players_layout"
            android:orientation="vertical"
            >
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/add_player_button"
            android:layout_weight="1"
            android:text="@string/add_player"
            style="@style/StartButton"/>
        <Button
            style="@style/StartButton"
            android:id="@+id/remove_player_button"
            android:layout_weight="1"
            android:text="@string/remove_player"/>
        <Button
            style="@style/StartButton"
            android:id="@+id/start_game_button"
            android:layout_weight="1"
            android:text="@string/start"/>
    </LinearLayout>

</LinearLayout>